--- a/src/cssfiles/TodoComponent.css
+++ b/src/cssfiles/TodoComponent.css
@@ -10,6 +10,9 @@
     color: white;
 }
 .completeButton{
-    background-color:springgreen ;
+    background-color:green ;
     color: white;
+}
+.done {
+      text-decoration: line-through;
 }
